feat(scaffolding): path aliases and server

--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "@hapi/hapi": "^19.2.0"
   },
   "devDependencies": {
+    "@types/hapi__hapi": "^19.0.3",
     "@types/node": "^14.0.23",
+    "module-alias": "^2.2.2",
     "nodemon": "^2.0.4"
+  },
+  "_moduleAliases": {
+    "@env": "dist/environment"
   }
 }
