--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "build": "tsc",
     "build:run": "npm run build && node ./dist/server.js -r source-map-support/register dist/pathToJson.js"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -21,18 +27,22 @@
     "source-map-support": "^0.5.19"
   },
   "devDependencies": {
+    "@commitlint/cli": "^9.1.1",
     "@types/bcrypt": "^3.0.0",
-    "@types/joi": "^14.3.4",
     "@types/hapi__boom": "^9.0.1",
     "@types/hapi__hapi": "^19.0.3",
     "@types/hapi__inert": "^5.2.0",
     "@types/hapi__joi": "^17.1.4",
     "@types/hapi__vision": "^5.5.1",
+    "@types/joi": "^14.3.4",
     "@types/mongoose": "^5.7.32",
     "@types/node": "^14.0.23",
     "hapi-swagger": "^13.0.2",
+    "husky": "^4.2.5",
     "module-alias": "^2.2.2",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "prettier": "^2.0.5",
+    "pretty-quick": "^2.0.1"
   },
   "_moduleAliases": {
     "@env": "dist/environment",
