--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "singleQuote": true,
   "printWidth": 80,
   "tabWidth": 2,
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "noSemi": true
 }
