fix(scaffolding): source maps working

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "dist/server.js",
   "scripts": {
-    "dev": "nodemon -e ts --exec npm run build:run -r source-map-support/register dist/pathToJson.js",
+    "dev": "nodemon -e ts --exec npm run build:run -r source-map-support/register src/server.ts",
     "build": "tsc",
-    "build:run": "npm run build && node ./dist/server.js -r source-map-support/register dist/pathToJson.js"
+    "build:run": "npm run build && node ./dist/server.js"
   },
   "husky": {
     "hooks": {
